deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenable-exporter
  labels:
    app: tenable-exporter
spec:
  selector: 
    matchLabels:
      app: tenable-exporter
  template:
    metadata:
      labels:
        app: tenable-exporter
    spec:
      containers:
        - name: tenable-exporter
          image: mertuila/tenable_exporter:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits: 
              memory: "128Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /health
              port: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
          ports:
          - containerPort: 9090
