ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tenable-exporter-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec: 
  ingressClassName: alb
  rules:
    - http:
        paths: 
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: tenable-exporter-service
                port:
                  number: 9090
